Adding icons to side navigation bar.

--- a/phylocommons/templates/home_menu.html
+++ b/phylocommons/templates/home_menu.html
@@ -1,4 +1,4 @@
-<li><a href="/">About</a></li>
-<li><a href="/contributors/">Contributors</a></li>
-<li><a href="http://code.phylocommons.org" target="_blank">Source/Project Info</a></li>
-<li><a href="/contact/">Contact</a></li>
+<li><a href="/"><i class="icon-info"></i> About</a></li>
+<li><a href="http://code.phylocommons.org" target="_blank"><i class="icon-info"></i> Source/Project Info</a></li>
+<li><a href="/contributors/"><i class="icon-group"></i> Contributors</a></li>
+<li><a href="/contact/"><i class="icon-envelope"></i> Contact</a></li>
