--- a/phylocommons/templates/tree_menu.html
+++ b/phylocommons/templates/tree_menu.html
@@ -1,6 +1,6 @@
-<li><a href="/trees/">List of trees</a></li>
-<li><a href="/trees/add/">Submit a tree</a></li>
-<li><a href="/query/">Query</a></li>
+<li><a href="/trees/"><i class="icon-list"></i> List of trees</a></li>
+<li><a href="/query/"><i class="icon-search"></i> Query</a></li>
+<li><a href="/trees/add/"><i class="icon-upload-alt"></i> Submit a tree</a></li>
 {% if request.user.is_staff %}
-<li class='admin'><a href="/trees/uploads/">Uploads</a></li>
+<li class='admin'><a href="/trees/uploads/"><i class="icon-lock"></i> Uploads</a></li>
 {% endif %}
