Replace tree_id parameter with tree.

--- a/treeview/templates/view.html
+++ b/treeview/templates/view.html
@@ -37,7 +37,7 @@
     </td></tr>
 
     <tr><td>Query</td><td>
-        <a href="/query/?tree_id={{tree_id}}">Click to create a subtree from members of this tree</a>
+        <a href="/query/?tree={{tree_id}}">Click to create a subtree from members of this tree</a>
     </td></tr>
 </table>
 
