Setting default format to open in tree viewer and synonymy checking on by default. These are friendlier defaults for new users.

--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -73,7 +73,7 @@
     </div>
     
     <div class="control-group advanced">
-        <label class="control-label" for='taxonomy' data-original-title="Choose a taxonomy to enable synonym and/or common name matching, if available.">
+        <label class="control-label" for='taxonomy' data-original-title="Choose a taxonomy to enable synonym and/or common name matching, if available. Selecting None may speed up queries.">
             Using taxonomy
             <i class="icon-question-sign"></i>
         </label>
