Use markdown for user profiles.

--- a/phylocommons/templates/profiles/profile_detail.html
+++ b/phylocommons/templates/profiles/profile_detail.html
@@ -21,7 +21,7 @@
     <tr><td>
         <strong>Profile</strong>
     </td><td>
-        <pre>{{ user.get_profile.profile_text }}</pre>
+        {{ user.get_profile.profile_text_html|safe }}
     </td></tr>
 </table>
 
