--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -39,7 +39,7 @@
                     <ul class="nav pull-right">
                         <li {% block nav-user %}{% endblock %}>
                         {% if request.user.is_authenticated %}
-                            <a href='/profiles/{{request.user.username}}/'>
+                            <a href='/user/{{request.user.username}}/'>
                             <i class="icon-user"></i>
                             {{ request.user.username }}
                             </a></li>
