--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -49,7 +49,7 @@
                             <i class="icon-lock"></i>
                             admin</a></li>
                         {% endif %}
-                        <li><a href="{% url auth_logout %}">
+                        <li><a href="{% url auth_logout %}?next={{ request.get_full_path }}">
                             <i class="icon-signout"></i>
                             log out</a></li>
                         {% else %}
