--- a/treeview/templates/svgview.html
+++ b/treeview/templates/svgview.html
@@ -40,7 +40,7 @@
                 $('#newick').val(data);
                 $('#message2').append('<a href="data:text/plaintext,' + 
                                       data + //encodeURIComponent(data) + 
-                                      '"><img src="/static/img/download.svg" class="img-polaroid" width="50px" height="50px"/>Click to download in Newick format</a>'
+                                      '" class="btn"><img src="/static/img/download.svg" class="img-polaroid" width="50px" height="50px"/> Download in Newick format</a>'
                                       );
                 $('img#loading').hide();
                 $('div#treelib-widget').show();
