Stylize reload link on drawing failure as button.

--- a/treeview/templates/svgview.html
+++ b/treeview/templates/svgview.html
@@ -53,7 +53,7 @@
             },
             error: function(msg) {
                 $('#message').empty();
-                $('#message').append("<a>Couldn't load tree. Click here to try again.</a>");
+                $('#message').append("<a class='btn'>Couldn't load tree. Click here to try again.</a>");
             }
         });
     });
