Style 'advanced options' on query page as a button.

--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -65,7 +65,7 @@
         
     <div class="control-group">
         <div class="controls">
-            <a style="cursor:pointer" onclick='toggle_extra_options()'>
+            <a class="btn" onclick='toggle_extra_options()'>
                 <i id="expand_collapse" class="icon-collapse"></i>
                 Advanced options...
             </a>
