Adding help page with some example use cases.

--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -32,6 +32,9 @@
                         <li {% block nav-query %}{% endblock %}><a href="/query/">
                             <i class="icon-search"></i>
                             Query</a></li>
+                        <li {% block nav-help %}{% endblock %}><a href="/help/">
+                            <i class="icon-question"></i>
+                            Help</a></li>
                         <li {% block nav-contact %}{% endblock %}><a href="/contact/">
                             <i class="icon-envelope"></i>
                             Contact</a></li>
