--- a/phylocommons/templates/help.html
+++ b/phylocommons/templates/help.html
@@ -44,7 +44,7 @@
     <tr><td>
         The name of a higher taxon (genus, family, etc.)
     </td><td>
-        A tree containing all descendants of that taxon
+        A tree containing all members of that taxon
     </td><td>
         On the <a href="/query/">query page</a>, enter the taxon name into the 
         box. Uncheck the "prune results" box, and press the "get tree" button.
