Warn user about case sensitivity of searches if there are no results.

--- a/treeview/templates/list.html
+++ b/treeview/templates/list.html
@@ -59,7 +59,7 @@
 
 {% else %}
 
-<p>No trees were found. Try a different search.</p>
+<p>No trees were found. Try a different search. (Note that searches are case sensitive.)</p>
 
 {% endif %}
 
