Adding warning about case sensitivity to query page.

--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -16,7 +16,7 @@
     {{ form.non_field_errors }}
     
     <div class="control-group" id='taxa'>
-        <label class="control-label" for='q' data-original-title="A comma-delimited list of taxa to search for. Use spaces, not underscores.">
+        <label class="control-label" for='q' data-original-title="A comma-delimited list of taxa to search for. Use spaces, not underscores. Queries are case sensitive!">
             Taxa
             <i class="icon-question-sign"></i>
         </label>
